--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ section {
     width: 500px;
     margin: auto;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.418) ;
+    font: normal 15px Arial;
 
 }footer {
     text-align: center;
